syntax = "proto2";

option csharp_namespace = "Nethermind.Libp2p.Protocols.Identify.Dto";

message Identify {
  optional string protocolVersion = 5;
  optional string agentVersion = 6;
  optional bytes publicKey = 1;
  repeated bytes listenAddrs = 2;
  optional bytes observedAddr = 4;
  repeated string protocols = 3;
  optional bytes signedPeerRecord = 8;
}
